fix: adjust opacity for navigation buttons for improved visibility

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -72,6 +72,7 @@
     font-family: var(--font-nav);
     font-weight: 100;
     cursor: pointer;
+    opacity: 0.5;
     display: flex;
     align-items: center;
     justify-content: center;
